# adrv9009-zu11eg-fan-control-daemon

./: .gitignore  CMakeLists.txt  README.md  fancontrold.c
init/: CMakeLists.txt  fancontrold.conf.cmakein  fancontrold.init.cmakein  fancontrold.service.cmakein
